Fixed broken styles

--- a/css/app.css
+++ b/css/app.css
@@ -236,39 +236,35 @@ html, body {
 }
 
 
-/*.view-animate-container {*/
-    /*position:relative;*/
-    /*height:100px!important;*/
-    /*background:white;*/
-    /*border:1px solid black;*/
-    /*height:40px;*/
-    /*overflow:hidden;*/
-/*}*/
+@media (min-width: 768px) {
 
-.view-animate {
-    padding:10px;
-}
+    .view-animate {
+        padding: 10px;
+    }
 
-.view-animate.ng-enter, .view-animate.ng-leave {
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
+    .view-animate.ng-enter, .view-animate.ng-leave {
+        transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
 
-    display:block;
-    width:100%;
+        display: block;
+        width: 100%;
 
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    padding:10px;
-}
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 10px;
+    }
 
-.view-animate.ng-enter {
-    left:100%;
-}
-.view-animate.ng-enter.ng-enter-active {
-    left:0;
-}
-.view-animate.ng-leave.ng-leave-active {
-    left:-100%;
+    .view-animate.ng-enter {
+        left: 100%;
+    }
+
+    .view-animate.ng-enter.ng-enter-active {
+        left: 0;
+    }
+
+    .view-animate.ng-leave.ng-leave-active {
+        left: -100%;
+    }
 }
